again text wrapping issue

--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -190,7 +190,7 @@
 					text-align: center;
 					font-size: 0.875rem;
 					font-weight: 700;
-					text-wrap: nowrap;
+					white-space: nowrap;
 				}
 			}
 			&:hover {
@@ -282,21 +282,20 @@
 				}
 			}
 			.buttonAdd {
-				width: 115px;
+				width: 130px;
 				height: 24px;
 
 				margin-top: 8px;
 
 				.add-icons {
-					gap: 2px;
+					gap: 15px;
 
 					svg {
 						width: 18px;
 						height: 18px;
 					}
 					h6 {
-						width: 81px;
-						font-size: 0.675rem;
+						font-size: 0.75rem;
 					}
 				}
 			}
